added min max scaler

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -24,18 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read CSV and drop unnamed columns\n",
     "df = pd.read_csv('Final Yield_Weather (Mindanao).csv')\n",
-    "df = df.drop(columns=['Unnamed: 0'])"
+    "df = df.drop(columns=['Unnamed: 0', 'Location', 'Year'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "[749 rows x 21 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,6 +526,298 @@
     "# Display histogram of a specific column\n",
     "plt.hist(df.drop(columns=['Location', 'Year', 'weathercode (wmo code)']))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Min Max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "normalized_data = scaler.fit_transform(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.46153846, 0.13692946, 0.71305595, ..., 0.01558056, 0.01264188,\n",
+       "        0.36930908],\n",
+       "       [0.61538462, 0.09543568, 0.70272597, ..., 0.01592848, 0.01291375,\n",
+       "        0.37006781],\n",
+       "       [0.61538462, 0.09543568, 0.74060258, ..., 0.01505173, 0.01257391,\n",
+       "        0.35852501],\n",
+       "       ...,\n",
+       "       [0.53846154, 0.13278008, 0.80832138, ..., 0.00351052, 0.00333039,\n",
+       "        0.27352055],\n",
+       "       [0.53846154, 0.07053942, 0.82094692, ..., 0.00372135, 0.00339836,\n",
+       "        0.28485182],\n",
+       "       [0.38461538, 0.18257261, 0.7830703 , ..., 0.00340544, 0.00339836,\n",
+       "        0.26131023]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalized_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new DataFrame using the normalized data and original column names\n",
+    "normalized_df = pd.DataFrame(normalized_data, columns=df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Wind_Direction</th>\n",
+       "      <th>Wind_Speed_(km/h)</th>\n",
+       "      <th>temperature_2m (°C)</th>\n",
+       "      <th>relativehumidity_2m (%)</th>\n",
+       "      <th>dewpoint_2m (°C)</th>\n",
+       "      <th>surface_pressure (hPa)</th>\n",
+       "      <th>et0_fao_evapotranspiration (mm)</th>\n",
+       "      <th>vapor_pressure_deficit (kPa)</th>\n",
+       "      <th>soil_temperature_28_to_100cm (°C)</th>\n",
+       "      <th>soil_moisture_28_to_100cm (m³/m³)</th>\n",
+       "      <th>direct_radiation (W/m²)</th>\n",
+       "      <th>diffuse_radiation (W/m²)</th>\n",
+       "      <th>rain (mm)</th>\n",
+       "      <th>weathercode (wmo code)</th>\n",
+       "      <th>windgusts_10m (km/h)</th>\n",
+       "      <th>cloudcover (%)</th>\n",
+       "      <th>Production (mt)</th>\n",
+       "      <th>Area (ha)</th>\n",
+       "      <th>Yield (mt/ha)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.461538</td>\n",
+       "      <td>0.136929</td>\n",
+       "      <td>0.713056</td>\n",
+       "      <td>0.255975</td>\n",
+       "      <td>0.573394</td>\n",
+       "      <td>0.667076</td>\n",
+       "      <td>0.619048</td>\n",
+       "      <td>0.696970</td>\n",
+       "      <td>0.616583</td>\n",
+       "      <td>0.322581</td>\n",
+       "      <td>0.463787</td>\n",
+       "      <td>0.424911</td>\n",
+       "      <td>0.195503</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.161111</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.015581</td>\n",
+       "      <td>0.012642</td>\n",
+       "      <td>0.369309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.615385</td>\n",
+       "      <td>0.095436</td>\n",
+       "      <td>0.702726</td>\n",
+       "      <td>0.232704</td>\n",
+       "      <td>0.556193</td>\n",
+       "      <td>0.669438</td>\n",
+       "      <td>0.619048</td>\n",
+       "      <td>0.712121</td>\n",
+       "      <td>0.602470</td>\n",
+       "      <td>0.290323</td>\n",
+       "      <td>0.447879</td>\n",
+       "      <td>0.598331</td>\n",
+       "      <td>0.182520</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.277778</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.015928</td>\n",
+       "      <td>0.012914</td>\n",
+       "      <td>0.370068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.615385</td>\n",
+       "      <td>0.095436</td>\n",
+       "      <td>0.740603</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.485092</td>\n",
+       "      <td>0.672744</td>\n",
+       "      <td>0.809524</td>\n",
+       "      <td>0.954545</td>\n",
+       "      <td>0.721258</td>\n",
+       "      <td>0.096774</td>\n",
+       "      <td>0.523280</td>\n",
+       "      <td>0.582241</td>\n",
+       "      <td>0.143454</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.077778</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.015052</td>\n",
+       "      <td>0.012574</td>\n",
+       "      <td>0.358525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.615385</td>\n",
+       "      <td>0.116183</td>\n",
+       "      <td>0.686657</td>\n",
+       "      <td>0.333962</td>\n",
+       "      <td>0.580275</td>\n",
+       "      <td>0.670477</td>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.621212</td>\n",
+       "      <td>0.583652</td>\n",
+       "      <td>0.322581</td>\n",
+       "      <td>0.414123</td>\n",
+       "      <td>0.492253</td>\n",
+       "      <td>0.257075</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.015914</td>\n",
+       "      <td>0.012846</td>\n",
+       "      <td>0.371581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.461538</td>\n",
+       "      <td>0.116183</td>\n",
+       "      <td>0.691248</td>\n",
+       "      <td>0.324528</td>\n",
+       "      <td>0.582569</td>\n",
+       "      <td>0.667265</td>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.621212</td>\n",
+       "      <td>0.584828</td>\n",
+       "      <td>0.354839</td>\n",
+       "      <td>0.433523</td>\n",
+       "      <td>0.445769</td>\n",
+       "      <td>0.199584</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.116667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.016375</td>\n",
+       "      <td>0.013186</td>\n",
+       "      <td>0.373047</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Wind_Direction  Wind_Speed_(km/h)  temperature_2m (°C)  \\\n",
+       "0        0.461538           0.136929             0.713056   \n",
+       "1        0.615385           0.095436             0.702726   \n",
+       "2        0.615385           0.095436             0.740603   \n",
+       "3        0.615385           0.116183             0.686657   \n",
+       "4        0.461538           0.116183             0.691248   \n",
+       "\n",
+       "   relativehumidity_2m (%)  dewpoint_2m (°C)  surface_pressure (hPa)  \\\n",
+       "0                 0.255975          0.573394                0.667076   \n",
+       "1                 0.232704          0.556193                0.669438   \n",
+       "2                 0.000000          0.485092                0.672744   \n",
+       "3                 0.333962          0.580275                0.670477   \n",
+       "4                 0.324528          0.582569                0.667265   \n",
+       "\n",
+       "   et0_fao_evapotranspiration (mm)  vapor_pressure_deficit (kPa)  \\\n",
+       "0                         0.619048                      0.696970   \n",
+       "1                         0.619048                      0.712121   \n",
+       "2                         0.809524                      0.954545   \n",
+       "3                         0.428571                      0.621212   \n",
+       "4                         0.428571                      0.621212   \n",
+       "\n",
+       "   soil_temperature_28_to_100cm (°C)  soil_moisture_28_to_100cm (m³/m³)  \\\n",
+       "0                           0.616583                           0.322581   \n",
+       "1                           0.602470                           0.290323   \n",
+       "2                           0.721258                           0.096774   \n",
+       "3                           0.583652                           0.322581   \n",
+       "4                           0.584828                           0.354839   \n",
+       "\n",
+       "   direct_radiation (W/m²)  diffuse_radiation (W/m²)  rain (mm)  \\\n",
+       "0                 0.463787                  0.424911   0.195503   \n",
+       "1                 0.447879                  0.598331   0.182520   \n",
+       "2                 0.523280                  0.582241   0.143454   \n",
+       "3                 0.414123                  0.492253   0.257075   \n",
+       "4                 0.433523                  0.445769   0.199584   \n",
+       "\n",
+       "   weathercode (wmo code)  windgusts_10m (km/h)  cloudcover (%)  \\\n",
+       "0                     0.0              0.161111             1.0   \n",
+       "1                     0.0              0.277778             1.0   \n",
+       "2                     0.0              0.077778             1.0   \n",
+       "3                     0.0              0.100000             1.0   \n",
+       "4                     0.0              0.116667             1.0   \n",
+       "\n",
+       "   Production (mt)  Area (ha)  Yield (mt/ha)  \n",
+       "0         0.015581   0.012642       0.369309  \n",
+       "1         0.015928   0.012914       0.370068  \n",
+       "2         0.015052   0.012574       0.358525  \n",
+       "3         0.015914   0.012846       0.371581  \n",
+       "4         0.016375   0.013186       0.373047  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalized_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalized_df.to_csv('normalized_df.csv')"
    ]
   },
   {
@@ -8272,7 +8564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
